--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [features]
 default = []
 debug-ws = []
+my-telemetry = ["dep:my-telemetry"]
 
 
 [dependencies]
@@ -15,6 +16,9 @@ my-http-server = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-s
 my-http-server-web-sockets = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-http-server-web-sockets.git" }
 rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
 my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
+
+
+my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }
 
 tokio = { version = "*", features = ["full"] }
 async-trait = "*"
